# datatalks-mlops-zoomcamp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cleanup.yml  inference_api.yml  mage.yml  mlflow.yml  terraform.yml
01-intro/: homework_1.ipynb
02-exp-tracking/: homework.ipynb
04-deployment/: .gitignore
07-project/airquality/: Makefile  README.md  docker-compose.yaml  local.env  mage.Dockerfile  mlflow.Dockerfile  mlflow_entrypoint.sh  pyproject.toml
07-project/airquality/api/: Dockerfile  local.env  main.py  requirements.txt  test_api.py
07-project/airquality/docs/: ARCHITECTURE.md  HOW_TO.md  MAGE_PIPELINES.md  SECRETS.md
07-project/airquality/inference_api/: Dockerfile  build.sh
07-project/airquality/infra/: .gitignore  main.tf  outputs.tf  sg.tf  variables.tf
07-project/airquality/infra/ecr/: main.tf  outputs.tf  variables.tf
07-project/airquality/infra/ecs/: iam.tf  logs.tf  main.tf  variables.tf
07-project/airquality/infra/rds/: outputs.tf  variables.tf
07-project/airquality/infra/sm/: main.tf  outputs.tf  variables.tf
07-project/airquality/infra/vpc/: variables.tf  vpc.tf
07-project/airquality/mage/: .gitignore  Dockerfile  metadata.yaml  requirements.txt
07-project/airquality/mage/conditionals/: dataset_drift.py
07-project/airquality/mage/custom/: evidently_report.py  trigger_model_training.py
07-project/airquality/mage/data_exporters/: export_openaq_data.py  export_predictions.py  train_and_log_model.py  update_training_data.py
07-project/airquality/mage/data_loaders/: dynamic_sensor_definition.py  load_openaq_data.py  load_reference_current.py  load_test_data.py  load_training_data.py
07-project/airquality/mage/magedb_config/: init.sql
07-project/airquality/mage/pipelines/model_training/: metadata.yaml  triggers.yaml
07-project/airquality/mage/pipelines/monitoring/: metadata.yaml
07-project/airquality/mage/pipelines/openaq_data_etl/: metadata.yaml  triggers.yaml
07-project/airquality/mage/pipelines/simulate_production_predictions/: metadata.yaml
07-project/airquality/mage/transformers/: predict.py  preprocess_training_data.py  reduce_openaq_data.py
07-project/airquality/mage/utils/: dbconfig.py
07-project/airquality/mlflow/: Dockerfile  entrypoint.sh  local.Dockerfile  requirements.txt
07-project/airquality/notebooks/: 01_proof_of_concept.ipynb  02_load_training_data.ipynb  03_model_training.ipynb  04_inference.ipynb  05_monitor.ipynb
07-project/airquality/notebooks/img/maps/: affected_locations.html  location_10689.html  na_sensors_and_closest.html  sensor_locations.html
infra/: .gitignore  main.tf  outputs.tf  sg.tf  variables.tf
(+78 files in other folders)
