[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Agustin Vargas Toro"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
jupyterlab = "^4.2.0"
fastparquet = "^2024.2.0"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
plotnine = "^0.13.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
