[tool.poetry]
name = "airquality"
version = "0.1.0"
description = ""
authors = ["Agustín Vargas Toro <fustincho@tuta.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
boto3 = "^1.34.153"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
ipykernel = "^6.29.5"
plotnine = "^0.13.6"
boto3 = "^1.34.139"
requests = "^2.32.3"
pyarrow = ">=4.0.0,<16.0.0"
folium = "^0.17.0"
contextily = "^1.6.0"
geopandas = "^1.0.1"
tqdm = "^4.66.4"
ipywidgets = "^8.1.3"
haversine = "^2.8.1"
xgboost = "^2.1.0"
scikit-learn = "^1.5.1"
optuna = "^3.6.1"
seaborn = "^0.13.2"
mlflow = "^2.14.3"
evidently = "0.4.28"
psycopg = {version = "3.1.19", extras = ["binary"]}
fastapi = "^0.111.1"
uvicorn = "^0.30.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
